--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ input[type=submit]:hover {
     margin: 5px 0;
 }
 
-/* ===== CARROUSEL ===== */
+/* ===== CARROUSEL MODERNE ===== */
 #carrousel {
     position: relative;
     height: 400px;
@@ -244,6 +244,7 @@ input[type=submit]:hover {
     border: 2px solid #ffd700;
 }
 
+
 /* ===== CATEGORIES ===== */
 .categories {
     margin-bottom: 20px;
@@ -313,6 +314,7 @@ input[type=submit]:hover {
 .filtres-container input[type="submit"]:hover {
     background-color: darkblue;
 }
+
 /* ===== MAPS ===== */
 #map {
     height: 500px;
@@ -322,4 +324,3 @@ input[type=submit]:hover {
     border-radius: 6px;
     box-shadow: 0 0 10px rgba(0,0,0,0.05);
 }
-
