--- a/style.css
+++ b/style.css
@@ -7,12 +7,39 @@ html, body {
 }
 
 #wrapper {
-    max-width: 1000px;
+    /*max-width: 1000px;*/
     margin: auto;
     background-color: white;
     padding: 20px;
     box-shadow: 0 0 10px lightgray;
 }
+
+/* ===== HEADER AVEC LOGO ===== */
+#header {
+    padding: 20px 0;
+    border-bottom: 2px solid lightgray;
+}
+
+.header-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.header-container .logo {
+    position: absolute;
+    left: 0;
+    width: 70px;
+    margin-left: 20px;
+}
+
+.header-container h1 {
+    font-size: 32px;
+    color: navy;
+    margin: 0;
+}
+
 
 /* ===== NAVIGATION ===== */
 nav {
@@ -158,7 +185,7 @@ input[type=submit]:hover {
     margin: 5px 0;
 }
 
-/* ===== CARROUSEL MODERNE ===== */
+/* ===== CARROUSEL ===== */
 #carrousel {
     position: relative;
     height: 400px;
@@ -244,7 +271,6 @@ input[type=submit]:hover {
     border: 2px solid #ffd700;
 }
 
-
 /* ===== CATEGORIES ===== */
 .categories {
     margin-bottom: 20px;
@@ -314,7 +340,6 @@ input[type=submit]:hover {
 .filtres-container input[type="submit"]:hover {
     background-color: darkblue;
 }
-
 /* ===== MAPS ===== */
 #map {
     height: 500px;
